--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "type": "module",
-  "name": "myapp",
+  "name": "fastify-test",
   "version": "1.0.0",
+  "type": "module",
   "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.js",
-  "directories": {
-    "test": "test"
-  },
+  "main": "src/index.js",
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/flash": "^6.0.3",
     "@fastify/formbody": "^8.0.2",
     "@fastify/sensible": "^6.0.0",
+    "@fastify/session": "^11.1.0",
     "@fastify/view": "^11.1.1",
     "abstract-logging": "^2.0.1",
     "ajv": "^8.17.1",
@@ -18,6 +18,7 @@
     "ansi-styles": "^4.3.0",
     "atomic-sleep": "^1.0.0",
     "avvio": "^9.1.0",
+    "bcrypt": "^6.0.0",
     "chalk": "^4.1.2",
     "chokidar": "^4.0.3",
     "close-with-grace": "^2.2.0",
@@ -38,9 +39,10 @@
     "fast-redact": "^3.5.0",
     "fast-safe-stringify": "^2.1.1",
     "fast-uri": "^3.1.0",
-    "fastify": "^5.0.0",
+    "fastify": "^5.6.0",
     "fastify-cli": "^7.4.0",
     "fastify-plugin": "^5.0.0",
+    "fastify-reverse-routes": "^3.0.0",
     "fastq": "^1.19.1",
     "find-my-way": "^9.3.0",
     "find-up": "^3.0.0",
@@ -90,6 +92,7 @@
     "set-cookie-parser": "^2.7.1",
     "sonic-boom": "^4.2.0",
     "split2": "^4.2.0",
+    "sqlite3": "^5.1.7",
     "string_decoder": "^1.3.0",
     "strip-json-comments": "^5.0.3",
     "supports-color": "^7.2.0",
@@ -103,12 +106,13 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
-    "c8": "^10.1.2"
+    "c8": "^10.1.2",
+    "tsx": "^4.20.6"
   },
   "scripts": {
-    "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "dev": "tsx watch src/index.js",
+    "start": "tsx src/index.js",
+    "test": "node --test test/**/*.test.js"
   },
   "keywords": [],
   "author": "",
